# R-MANTIC-NIGHT-V2

./: .replit  bot.py  config.py  main.py  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  arabic-bot-arch.md
bot/config/: settings.py
bot/database/: __init__.py  base.py
bot/database/models/: __init__.py  admin.py  channel.py  character.py  conversation.py  message.py  setting.py  statistics.py  user.py
bot/database/repositories/: __init__.py  admin_repo.py  base.py  channel_repo.py  character_repo.py  conversation_repo.py  message_repo.py  setting_repo.py  statistics_repo.py  user_repo.py
bot/filters/: __init__.py  admin_filter.py
bot/handlers/: __init__.py
bot/handlers/admin/: __init__.py  admins_handler.py  backup_handler.py  broadcast_handler.py  channels_handler.py  characters_handler.py  main_handler.py  settings_handler.py  statistics_handler.py  users_handler.py
bot/handlers/user/: __init__.py  characters_handler.py  chat_handler.py  conversations_handler.py  start_handler.py
bot/keyboards/: __init__.py
bot/keyboards/admin/: __init__.py  admins_kb.py  broadcast_kb.py  channels_kb.py  characters_kb.py  main_kb.py  settings_kb.py  users_kb.py
bot/middlewares/: __init__.py  auth_middleware.py  rate_limit_middleware.py  subscription_middleware.py
bot/services/: __init__.py  ai_service.py  broadcast_service.py  statistics_service.py
bot/states/: __init__.py  admin_states.py  user_states.py
bot/utils/: __init__.py  helpers.py  logger.py
migrations/: env.py
uni_api/: request.py  response.py  utils.py
utils/: scripts.py
(+4 files in other folders)
