[project]
name = "chatgpt-telegram-bot"
version = "1.0.19"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aient==1.2.57",
    "aiofiles>=24.1.0",
    "aiogram==3.13.1",
    "aiohttp>=3.10.11",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.13.5",
    "chardet>=5.2.0",
    "duckduckgo-search==5.3.1",
    "fake-useragent>=2.2.0",
    "fastapi>=0.116.1",
    "html2text>=2025.4.15",
    "httpx-socks>=0.10.1",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "lxml-html-clean>=0.4.2",
    "msgspec>=0.19.0",
    "pdfminer-six==20240706",
    "pillow>=11.3.0",
    "psutil>=7.2.2",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.1.1",
    "python-telegram-bot[job-queue,rate-limiter,webhooks]>=22.3",
    "pytz>=2025.2",
    "redis>=8.0.0",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.51",
    "telegram>=0.0.1",
    "uvicorn>=0.49.0",
]
